# biz.dfch.scnfmixr

./: .flake8  .gitignore  INSTALL.md  LICENSE  NOTICE.md  README.md  SOURCES.md  app.service  logging.conf  pyproject.toml  requirements.txt  setup.py  setup.sh  sonar-project.properties
prep/: StreamdeckIconInputKeyMapping.xlsx
prep/snd/: state_event_de.py  state_event_en.py  state_event_fr.py  state_event_it.py  transition_event_de.py  transition_event_en.py  transition_event_fr-raw.txt  transition_event_fr.py  transition_event_it.py
prep/snd/EN/: state_event.py
res/: README.md
service/: scnfmixr.service
service/mpd/playback/: mpd.conf
src/: AlsaStreamInfo.py  AlsaStreamInfoParser.py  AlsaStreamInfoParserContext.py  AlsaStreamInfoState.py  AlsaStreamInterfaceInfo.py  AlsaStreamParser.py  MultiLineTextParser.py  MultiLineTextParserContext.py  TextUtils.py  Version.py  __init__.py  __main__.py  app.service  log.py  main.py  main.service  zzz __main__.py
src/AlsaUsb/: AlsaStreamInfoVisitor.py  __init__.py
src/Asyn/: Process.py
src/Text/: MultiLineTextParser.py  MultiLineTextParserContext.py  TextUtils.py  __init__.py
src/alsa_usb/: AlsaStreamInfoParser.py  AlsaStreamInfoVisitor.py  AlsaStreamInfoVisitorState.py  AlsaStreamInterfaceInfo.py  __init__.py
src/asyn/: Process.py  Process1.py  Process2.py  __init__.py
src/biz/: __init__.py  __main__.py
src/biz/dfch/: __init__.py
src/col/: CircularQueue.py  __init__.py
src/envEmbedded/: Asound.py  Usb.py  UsbDeviceInfo.py  __init__.py
src/env_embedded/: Asound.py  AsoundCardInfo.py  Playback.py  ProcAlsaUsbDeviceInfo.py  Usb.py  UsbDeviceInfo.py  __init__.py
src/jack_commands/: AlsaJackBase.py  AlsaToJack.py  JackConnection.py  JackPort.py  JackToAlsa.py  ZitaBridgeAlsaToJack.py  ZitaBridgeBase.py  ZitaBridgeJackToAlsa.py  __init__.py
src/my_package/: MyModule.py  MyOtherModule.py  __init__.py
src/service/: SetupDevice.py  __init__.py  jackd.service  mpd@.service  scnfmixr.service
src/snd/: README.md
src/ui/: ExecutionContext.py  Fsm.py  KeyboardHandler.py  StateBase.py  StateInfoEnd.py  StateInfoStart.py  TransitionBase.py  TransitionInfoEnd.py  TransitionInfoStart.py  __init__.py
src/ui/output/: AudioPlayer.py  __init__.py
tests/: __init__.py  test_AlsaStreamInfo.py  test_AlsaStreamInfoParser.py  test_MultiLineTextParser.py  test_TextUtils.py  test___main__.py  test_main.py  test_template.py
tests/AlsaUsb/: test_AlsaStreamInfoVisitor.py
tests/Asyn/: test_Process.py
tests/MyPackage/: test_MyModule.py
tests/Text/: __init__.py  test_MultiLineTextParser.py  test_TextUtils.py
tests/alsa_usb/: test_AlsaStreamInfoVisitor.py
tests/alsa_usb/alsa_stream0/: __init__.py  antlion_audio.py  epos_expand_30t.py  epos_expand_40t.py  icybox_ib_ac527.py  interface_44100_capture_only.py  jabra_evolve_20.py  jabra_speak2_J75.py  jabra_speak_510_0420.py  jabra_speak_510_0422.py  macro_silicon_ms2109.py  roland_sp404mkii.py  sabrent.py  sound_devices_mixpre3ii_2020.py  template.py  (+3 more)
tests/app/: test_state1.py
tests/asyn/: test_Process.py  test_process.py
tests/asyn2/: test_Process.py
tests/col/: test_CircularQueue.py
tests/envEmbedded/: test_Usb.py
tests/env_embedded/: test_Usb.py  test_usb.py
tests/integration/: item-5s-1.flac  test_AudioPlayer.py  test_audioplayer.py
tests/jack_commands/: test_JackConnect.py  test_JackConnection.py  test_JackPort.py
tests/my_package/: test_MyModule.py
tests/scnfmixr/: test_application_context.py  test_date_diff.py  test_date_time_name_input.py  test_udevadm.py
tests/ui/: __init__.py  test_Fsm.py  test_State.py  test_StateBase.py  test_TransitionBase.py
(+378 files in other folders)
